added more translation

--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "العنصر الوارد",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "سيتم نقل العناصر هنا تلقائيا إلى المخزون الخاص بك بمجرد أن يكون لديك مساحة كافية.",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "سيتم نقل العناصر هنا تلقائيًا إلى مخزونك بمجرد أن يكون لديك مساحة كافية.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "سيتم عرض جزء فقط من القائمة الكاملة إذا كان لديك العديد من العناصر في صندوق الوارد الخاص بك.",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "ينتهي في ${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "تنتهي: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "لا يوجد عنصر في علبة الوارد الخاصة بك البند الخاص بك",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "قد يكون هناك المزيد من العناصر في صندوق الوارد الخاص بك ، ولكن لديك الكثير من العناصر في صندوق الوارد الخاص بك لعرضها جميعًا.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "الحصول على جميع البنود",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "قدرة المعايرة",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "الآثار العالمية",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "اسم",
@@ -5796,6 +5800,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "مرحبا شباب! انضم إلى زنزانة بلدي [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "يرجى الانتظار قبل إرسال دعوة أخرى",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -5883,6 +5900,10 @@
  	 	 	 	"trans": "شارك الآن",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "يشارك",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "هل تعتقد أنك قوي بما فيه الكفاية؟ تأخذ أعداء أقوى في زنزانة! \r\n                         تذكر شراء بعض البند الشفاء! لن ترغب بعد المعركة في زنزانة",
@@ -6104,6 +6125,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "كم تريد بيعها؟",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "المزامنة مع الخادم ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
