--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "Postfach",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Hier gelagerte Gegenstände werden automatisch in dein Inventar verschoben, sobald du genügend Platz hast.",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "Die Artikel hier werden automatisch in Ihr Inventar verschoben, sobald Sie genügend Platz haben.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "Nur ein Teil der vollständigen Liste wird angezeigt, wenn Sie zu viele Elemente in Ihrem Posteingang haben.",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Läuft in ${date} ab",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "Läuft ab: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "Keine Gegenstände in deinem Postfach",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "In Ihrem Posteingang gibt es möglicherweise mehr Artikel, aber Sie haben zu viele Artikel in Ihrem Posteingang, um sie alle anzuzeigen.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "Alle Gegenstände nehmen",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Kalibrierungskapazität",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "Globale Effekte",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "Name",
@@ -5796,6 +5800,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "Hallo Leute! Treten Sie meinem Dungeon [${type}] (lv ${level}) ==> ${dungeonInvite} bei",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "Bitte warten Sie, bevor Sie eine weitere Einladung senden",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -5883,6 +5900,10 @@
  	 	 	 	"trans": "Jetzt teilen",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "Aktie",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Glaubst du, du bist stark genug? Nimm es mit stärkeren Feinden im Dungeon auf!\r\n                         Denke daran, dir genügend Heilungsgegenstände zu besorgen! Du regenerierst nach Dungeonkämpfen nicht",
@@ -6104,6 +6125,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "Wieviele möchtest du verkaufen?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "Synchronisierung mit Server ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
