--- a/contribution/lang/en.json
+++ b/contribution/lang/en.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "Item Inbox",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
+ 	 	 	"descriptionV2": {
  	 	 	 	"trans": "Items here will be automatically moved to your inventory once you have enough space.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "Only part of the full list will be displayed if you have too many items in your inbox.",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Expires in ${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "Expires: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "There are no items in your item inbox",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "There might be more items in your inbox, but you have too many items in your inbox to display them all.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "Get All Items",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Calibration Capacity",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "Global Effects",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "Name",
@@ -6009,6 +6013,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "Please wait before sending another invite",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -6096,6 +6113,10 @@
  	 	 	 	"trans": "Share Now",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "Share",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Do you think you are strong enough? take on stronger enemies in dungeon!\r\n                        remember to buy some healing item! you won't regen after battle in dungeon",
@@ -6317,6 +6338,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "How many would you like to sell?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "Syncing with server..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
