--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "Kotak Masuk Item",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Item-barang di sini akan secara otomatis dipindahkan ke inventarismu di saat kamu memiliki cukup ruang.",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "Item di sini akan dipindahkan secara otomatis ke inventaris Anda setelah Anda memiliki ruang yang cukup.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "Hanya sebagian dari daftar lengkap yang akan ditampilkan jika Anda memiliki terlalu banyak item di kotak masuk Anda.",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Kedaluwarsa dalam ${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "Kedaluwarsa: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "Tidak ada barang di kotak masuk barang Kamu",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "Mungkin ada lebih banyak item di kotak masuk Anda, tetapi Anda memiliki terlalu banyak item di kotak masuk Anda untuk menampilkan semuanya.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "Dapatkan semua barang",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Kapasitas Kalibrasi",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "Efek Global",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "Nama",
@@ -5796,6 +5800,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "Hai teman-teman! Bergabunglah dengan Dungeon saya [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "Harap tunggu sebelum mengirim undangan lain",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -5883,6 +5900,10 @@
  	 	 	 	"trans": "Bagikan sekarang",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "Membagikan",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Apakah Kamu pikir Kamu cukup kuat? Carilah musuh yang lebih kuat di dungeon! \r\n                         Ingatlah untuk membeli beberapa item Healing! Nyawa kamu tidak akan bertambah setelah pertempuran di dungeon",
@@ -6104,6 +6125,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "Berapa banyak yang akan kamu jual?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "Menyinkronkan dengan server ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
