--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "Pošta",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
+ 	 	 	"descriptionV2": {
  	 	 	 	"trans": "Položky tu budú automaticky presunuté do vášho inventára, keď budete mať dostatok miesta.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "Zobrazí sa iba časť úplného zoznamu, ak máte v doručenej pošte príliš veľa položiek.",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Vyprší v ${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "Vyprší: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "Vo vašej doručenej pošte nie je žiadna položka",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "Vo vašej doručenej pošte by mohlo byť viac položiek, ale vo svojej doručenej pošte máte príliš veľa položiek na ich zobrazenie.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "Získajte všetky položky",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Kalibračná kapacita",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "Globálne účinky",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "názov",
@@ -6009,6 +6013,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "Čau ľudia! Pripojte sa k môjmu dungeonu [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "Pred odoslaním inej pozvánky počkajte",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -6096,6 +6113,10 @@
  	 	 	 	"trans": "Zdieľať",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "zdieľam",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Myslíš si, že si dosť silný? Vezmite silnejších nepriateľov v Dungeone! \r\n                         Nezabudnite si kúpiť nejaký liečivý predmet! Po bitke v Dungeone nebudete regenetovať",
@@ -6317,6 +6338,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "Koľko by ste chceli predať?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "Synchronizácia so serverom ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
