--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "Gelen Kutusu",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Buradaki öğeler yeterli alana sahip olduğunuzda otomatik olarak envanterinize taşınır.",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "Buradaki öğeler, yeterli alana sahip olduğunuzda otomatik olarak envanterinize taşınacaktır.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "Gelen kutunuzda çok fazla öğeniz varsa, tam listenin yalnızca bir kısmı görüntülenecektir.",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "${date} sonra zamanaşımına uğrar",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "Süresi doluyor: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "Gelen kutunuzda hiçbir şey yok",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "Gelen kutunuzda daha fazla öğe olabilir, ancak gelen kutunuzda hepsini görüntülemek için çok fazla öğe var.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "Tüm öğeleri al",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Kalibrasyon Kapasitesi",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "Küresel Etkiler",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "İsim",
@@ -5796,6 +5800,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "Hey Millet! Dungeon'uma katılın [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "Lütfen başka bir davet göndermeden önce bekleyin",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -5883,6 +5900,10 @@
  	 	 	 	"trans": "Şimdi paylaş",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "Paylaşmak",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Yeterince güçlü olduğunu düşünüyor musun? Zindanda daha güçlü düşmanlarla karşılaşın! \r\n                         Birkaç iyileştirme eşyası satın almayı unutmayın! Zindanda savaştan sonra canınız yenilenmeyecek",
@@ -6104,6 +6125,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "Kaç adet satmak istiyorsun?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "Sunucu ile senkronizasyon ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
