--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "Посилки",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Посилки у поштовій скриньці будуть автоматично додані до ваших кишень, коли буде достатньо місця.",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "Тут тут будуть автоматично переміщені до вашого інвентарю, як тільки у вас буде достатньо місця.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "Лише частина повного списку відображатиметься, якщо у вас є занадто багато елементів у папці \"Вхідні\".",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Буде втрачено ${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "Закінчується: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "Немає пакунків в поштовій скриньці",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "У вашій скриньці може бути більше елементів, але у вас є занадто багато предметів у папці \"Вхідні\", щоб відобразити їх усіх.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "Отримати всі",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Рівень калібрування",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "Глобальні ефекти",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "Ім'я",
@@ -5997,6 +6001,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "Гей, хлопці! Приєднуйтесь до мого підземелля [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "Будь ласка, зачекайте, перш ніж надіслати ще одне запрошення",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -6084,6 +6101,10 @@
  	 	 	 	"trans": "Поділіться зараз",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "Розподіляти",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Ви думаєте, що ви досить сильні? Вийдіть на бій з сильнішими ворогами у підземеллі! \r\n                         Не забудьте купити ліки! Здоров'я не відновлюється після бою в підземеллі",
@@ -6305,6 +6326,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "Скільки ви хотіли б продати?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "Синхронізація з сервером ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
