--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "物品收件箱",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "一旦有足夠的空間，這裡的物品將自動移動到你的背包。",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "一旦您擁有足夠的空間，這裡的項目將自動移至您的庫存。",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "如果您的收件箱中的項目太多，則只會顯示完整列表的一部分。",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "到期日為${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "到期：${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "你的物品收件箱中沒有物品",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "收件箱中可能還有更多物品，但是收件箱中的物品太多，無法顯示所有內容。",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "收取所有物品",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "校準容量",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "全球效應",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "名稱",
@@ -6000,6 +6004,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "大家好！ 加入我的地城[${type}]（lv ${level}）==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "請等待再發送另一個邀請",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -6087,6 +6104,10 @@
  	 	 	 	"trans": "立即分享",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "分享",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "你認為自己足夠強大了嗎？ 來地下城中挑戰更強大的敵人吧！ \r\n                         記得購買醫療用品！在地下城戰鬥後不會自動恢復生命",
@@ -6308,6 +6329,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "你想出售多少？",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "與服務器同步中..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
