--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "Caixa de entrada de itens",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Itens aqui serão movidos automaticamente para o seu inventário depois de ter espaço suficiente.",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "Os itens aqui serão movidos automaticamente para o seu inventário assim que você tiver espaço suficiente.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "Apenas parte da lista completa será exibida se você tiver muitos itens na sua caixa de entrada.",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Expira em ${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "Expira: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "Não há nenhum item na caixa de entrada de itens",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "Pode haver mais itens na sua caixa de entrada, mas você tem muitos itens na sua caixa de entrada para exibir todos eles.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "Pegar todos os Itens",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacidade de Calibração",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "Efeitos Globais",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "Nome",
@@ -6009,6 +6013,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "Ei pessoal! Junte -se à minha masmorra [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "Aguarde antes de enviar outro convite",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -6096,6 +6113,10 @@
  	 	 	 	"trans": "Compartilhe agora",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "Compartilhada",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Você acha que é forte o suficiente? Assuma inimigos mais fortes na masmorra!\r\n                         Lembre-se de comprar algum item de cura! Você não vai se curar após as batalha na masmorra",
@@ -6317,6 +6338,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "Quantos você gostaria de vender?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "Sincronização com o servidor ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
