--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "Inbox poștal",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Elementele de aici vor fi mutate automat la inventarul dvs. odată ce aveți suficient spațiu.",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "Articolele de aici vor fi mutate automat la inventarul dvs. odată ce aveți suficient spațiu.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "Doar o parte din lista completă va fi afișată dacă aveți prea multe articole în căsuța de e -mail.",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "Expiră în ${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "Expiră: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "Nu există niciun element în căsuța poștală",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "S -ar putea să existe mai multe articole în căsuța de e -mail, dar aveți prea multe articole în căsuța de e -mail pentru a le afișa pe toate.",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "Obține Toate Obiectele",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacitate de Calibrare",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "Efecte Globale",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "Nume",
@@ -5796,6 +5800,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "Bună băieți! Alăturați -vă temniței mele [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "Vă rugăm să așteptați înainte de a trimite o altă invitație",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -5883,6 +5900,10 @@
  	 	 	 	"trans": "Împărtășește acum",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "Acțiune",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Crezi că ești destul de puternic? Luați dușmani mai puternici în temniță! \r\n                         Amintiți-vă să cumpărați un element de vindecare! Nu veți regeni după bătălia în Dungeon",
@@ -6104,6 +6125,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "Câte vrei să vinzi?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "Sincronizarea cu serverul ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
