--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -1998,20 +1998,28 @@
  	 	 	 	"trans": "กล่องจดหมาย",
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "รายการที่นี่จะถูกย้ายไปยังช่องเก็บของคุณโดยอัตโนมัติเมื่อคุณมีพื้นที่เพียงพอ",
+ 	 	 	"descriptionV2": {
+ 	 	 	 	"trans": "รายการที่นี่จะถูกย้ายไปยังสินค้าคงคลังของคุณโดยอัตโนมัติเมื่อคุณมีพื้นที่เพียงพอ",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
- 	 	 	"expireDate": {
+ 	 	 	"descriptionV3": {
+ 	 	 	 	"trans": "จะปรากฏขึ้นเพียงบางส่วนของรายการทั้งหมดหากคุณมีรายการมากเกินไปในกล่องจดหมายของคุณ",
+ 	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
+ 	 	 	},
+ 	 	 	"expiryDisplay": {
  	 	 	 	"vars": [
  	 	 	 	 	"date"
  	 	 	 	],
- 	 	 	 	"trans": "หมดอายุใน ${date}",
- 	 	 	 	"eng": "Expires in ${date}"
+ 	 	 	 	"trans": "หมดอายุ: ${date}",
+ 	 	 	 	"eng": "Expires: ${date}"
  	 	 	},
  	 	 	"empty": {
  	 	 	 	"trans": "ไม่มีรายการในกล่องจดหมายของคุณ",
  	 	 	 	"eng": "There is no item in your item inbox"
+ 	 	 	},
+ 	 	 	"tooManyItems": {
+ 	 	 	 	"trans": "อาจมีรายการเพิ่มเติมในกล่องจดหมายของคุณ แต่คุณมีรายการมากเกินไปในกล่องจดหมายของคุณเพื่อแสดงทั้งหมด",
+ 	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
  	 	 	 	"trans": "เก็บไอเท็มทั้งหมด",
@@ -2380,10 +2388,6 @@
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "กำลังการสอบเทียบ",
  	 	 	"eng": "Calibration Capacity"
- 	 	},
- 	 	"globalEffects": {
- 	 	 	"trans": "สถานะทั่วโลก",
- 	 	 	"eng": "Global Effects"
  	 	},
  	 	"name": {
  	 	 	"trans": "ชื่อ",
@@ -5796,6 +5800,19 @@
  	 	 	 	"eng": "Decline Quest"
  	 	 	}
  	 	},
+ 	 	"shareDungeonMessage": {
+ 	 	 	"vars": [
+ 	 	 	 	"type",
+ 	 	 	 	"level",
+ 	 	 	 	"dungeonInvite"
+ 	 	 	],
+ 	 	 	"trans": "ไงพวก! เข้าร่วม Dungeon ของฉัน [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
+ 	 	},
+ 	 	"shareDungeonCooldown": {
+ 	 	 	"trans": "โปรดรอก่อนส่งคำเชิญอื่น",
+ 	 	 	"eng": "Please wait before sending another invite"
+ 	 	},
  	 	"normal": {
  	 	 	"description": {
  	 	 	 	"vars": [
@@ -5883,6 +5900,10 @@
  	 	 	 	"trans": "แบ่งปันตอนนี้",
  	 	 	 	"eng": "Share Now"
  	 	 	}
+ 	 	},
+ 	 	"shareDungeon": {
+ 	 	 	"trans": "แบ่งปัน",
+ 	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "คุณคิดว่าคุณแข็งแกร่งพอหรือไม่? ใช้ศัตรูที่แข็งแกร่งในคุกใต้ดิน! \r\n                         อย่าลืมซื้อไอเท็มการรักษา! คุณจะไม่ฟื้นหลังจากการต่อสู้ในดันเจี้ยน",
@@ -6104,6 +6125,12 @@
  	 	"sellAmountModalTitle": {
  	 	 	"trans": "คุณต้องการขายเท่าไหร่?",
  	 	 	"eng": "How many would you like to sell?"
+ 	 	}
+ 	},
+ 	"mobile": {
+ 	 	"returnToAppMessage": {
+ 	 	 	"trans": "ซิงค์กับเซิร์ฟเวอร์ ..",
+ 	 	 	"eng": "Syncing with server.."
  	 	}
  	},
  	"secretKey": {
