--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -2506,7 +2506,7 @@
  	"battleUI": {
  	 	"quickSlotModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "クイックスロットにバインドするアイテムを選択します",
+ 	 	 	 	"trans": "クイックスロットに登録するアイテムを選択します",
  	 	 	 	"eng": "Select an item to bind to quick slot"
  	 	 	}
  	 	}
@@ -6420,7 +6420,7 @@
  	 	 	"vars": [
  	 	 	 	"CURRENCY"
  	 	 	],
- 	 	 	"trans": "この商品を購入するのに十分な${CURRENCY}がありません",
+ 	 	 	"trans": "このアイテムを購入するのに十分な${CURRENCY}がありません",
  	 	 	"eng": "You do not have enough ${CURRENCY} to purchase this item"
  	 	},
  	 	"slider": {
@@ -6584,7 +6584,7 @@
  	 	 	 	"eng": "Unofficial translation"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "このゲームは私一人だけで開発しているため, すべての言語を正しく翻訳するのはとても難しいですが, より多くの翻訳を追加しようと取り組んでいます:)",
+ 	 	 	 	"trans": "このゲームは私一人だけで開発しているため, すべての言語を正しく翻訳するのは困難です. それでも, できるかぎり多くの翻訳を取り入れようと努力しています:)",
  	 	 	 	"eng": "As this game is made by only one person, it's very difficult translate all languages correctly, but I am working on adding more translations :)"
  	 	 	},
  	 	 	"description": {
@@ -6627,7 +6627,7 @@
  	 	},
  	 	"promotion": {
  	 	 	"title": {
- 	 	 	 	"trans": "放送を受信しました",
+ 	 	 	 	"trans": "コマーシャル番組を受信",
  	 	 	 	"eng": "Broadcast Received"
  	 	 	},
  	 	 	"dontShowAgain": {
